--- a/app/src/main/res/values/calculator_styles.xml
+++ b/app/src/main/res/values/calculator_styles.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <dimen name="calculator_button_height">40dp</dimen>
 
+    <dimen name="calculator_button_text_size">14sp</dimen>
 
-    <dimen name="calculator_button_height">36dp</dimen>
+    <dimen name="calculator_button_gap">4dp</dimen>
 
-    <dimen name="calculator_button_text_size">12sp</dimen>
-
-    <dimen name="calculator_button_gap">12dp</dimen>
+    <dimen name="calculator_keyboard_inset">4dp</dimen>
 
     <dimen name="calculator_button_stroke_width">1dp</dimen>
 
@@ -38,7 +38,11 @@
         <item name="cornerSize">25%</item>
     </style>
 
-    <style name="calculator_button_style" parent="Widget.MaterialComponents.Button">
+    <style name="Calculator" parent="android:Widget.PopupWindow">
+        <item name="android:windowAnimationStyle">@android:style/Animation.InputMethod</item>
+    </style>
+
+    <style name="Calculator.Button" parent="Widget.MaterialComponents.Button">
         <item name="backgroundTint">@color/calculator_button_color</item>
         <item name="rippleColor">@color/calculator_button_ripple_color</item>
         <item name="shapeAppearance">@style/calculator_button_shape</item>
@@ -48,12 +52,12 @@
         <item name="android:layout_marginStart">@dimen/calculator_button_gap</item>
     </style>
 
-    <style name="calculator_clear_button_style" parent="calculator_button_style">
+    <style name="Calculator.Button.Clear" parent="Calculator.Button">
         <item name="backgroundTint">@color/calculator_clear_button_color</item>
         <item name="rippleColor">@color/calculator_clear_button_ripple_color</item>
     </style>
 
-    <style name="calculator_numeric_button_style" parent="Widget.MaterialComponents.Button.OutlinedButton">
+    <style name="Calculator.Button.Numeric" parent="Widget.MaterialComponents.Button.OutlinedButton">
         <item name="backgroundTint">@color/calculator_numeric_button_color</item>
         <item name="rippleColor">@color/calculator_button_ripple_color</item>
         <item name="strokeWidth">@dimen/calculator_button_stroke_width</item>
@@ -67,8 +71,9 @@
 
     <style name="calculator_equation_preview_text_appearance" parent="TextAppearance.MaterialComponents.Headline6">
         <item name="android:textStyle">normal</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@android:color/black</item>
         <item name="fontFamily">sans-serif</item>
         <item name="android:fontFamily">sans-serif</item>
     </style>
+
 </resources>
